# ecommerce-website

./: README.md
backend/: .env  app.py  pyproject.toml  requirements.txt
backend/config/: Env.py  cloudinaryConfig.py  db.py
backend/controllers/: authController.py
backend/middlewares/: VerifyToken.py
backend/models/: authModel.py
backend/routes/: authRoute.py
backend/services/: authService.py
frontend/: jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Header.jsx
frontend/src/components/ui/: AuthButton.jsx  LoaderComponent.jsx  Logo.jsx
frontend/src/constant/: auth.constant.js
frontend/src/context/: AuthContext.jsx  MainContext.jsx
frontend/src/layout/: AuthLayout.jsx  MainLayout.jsx  ProtectedLayout.jsx
frontend/src/pages/HomePage/: index.jsx
frontend/src/pages/auth/LoginUser/: index.jsx
frontend/src/pages/auth/ProfileUser/: index.jsx
frontend/src/pages/auth/ProfileUser/components/: AccountType.jsx  AvatarComponent.jsx  BasicDetails.jsx
frontend/src/pages/auth/RegisterUser/: index.jsx
frontend/src/redux/: store.js
frontend/src/redux/slice/: sidebar.slice.js  user.slice.js
frontend/src/utils/: axiosClient.js
